crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/as_pattern_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..210,
        body: [
            Match(
                StmtMatch {
                    range: 0..159,
                    subject: Name(
                        ExprName {
                            range: 6..13,
                            id: "subject",
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 140..159,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 146..152,
                                    pattern: Some(
                                        MatchAs(
                                            PatternMatchAs {
                                                range: 146..147,
                                                pattern: None,
                                                name: Some(
                                                    Identifier {
                                                        id: "x",
                                                        range: 146..147,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: "y",
                                            range: 151..152,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                AnnAssign(
                                    StmtAnnAssign {
                                        range: 154..159,
                                        target: UnaryOp(
                                            ExprUnaryOp {
                                                range: 154..158,
                                                op: UAdd,
                                                operand: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 156..158,
                                                        value: Complex {
                                                            real: 0.0,
                                                            imag: 1.0,
                                                        },
                                                    },
                                                ),
                                            },
                                        ),
                                        annotation: Name(
                                            ExprName {
                                                range: 159..159,
                                                id: "",
                                                ctx: Invalid,
                                            },
                                        ),
                                        value: None,
                                        simple: false,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Pass(
                StmtPass {
                    range: 205..209,
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |     #             complex literal pattern
4 |     #             v
5 |     case (x as y) + 1j:
  |                   ^ Syntax Error: expected Colon, found Plus
6 |     #     ^^^^^^
7 |     #    as-pattern
  |


  |
3 |     #             complex literal pattern
4 |     #             v
5 |     case (x as y) + 1j:
  |                        ^ Syntax Error: Expected an expression
6 |     #     ^^^^^^
7 |     #    as-pattern
8 |         pass
  |


  |
6 |     #     ^^^^^^
7 |     #    as-pattern
8 |         pass
  | ^^^^^^^^ Syntax Error: unexpected indentation
  |


  |
7 |     #    as-pattern
8 |         pass
  |
